@@ -33,3 +33,4 @@ KPresenter 1.2beta1 -> 1.2 beta 2
 - Add support for "keep ratio" in obj
 - Add "duplicate object" dialogbox
 - Add "Apply AutoFormat"
+- Add new type of begin/end line (line arrow, Dimension line )
